CHANGELOG

2.0.24
UTILS:
* pa_application-edit | class App method filteredApps() - introduce filter based on characeristics
* pa_address-edit | introduce 'filter=(object is.region)'
* pa_device-edit | actions=display-shadowrule - introduce PAN-OS version validation

BUGFIX:
* UTIL all object merger script | bugfix for pickfilter and excludefilter
* framework class App - optimise method filteredApps() to get correct apps if multiple apptag / characteristics are used in application-filter app
* pa_device-edit | bugfix for actions=display-shadowrule if running against PAN-OS FW device
* framework class cidr | bugfix for method cidr::stringToStartEnd() to correctly get IPv6 start / end
* class cidr - bugfix for method stringToStartEnd() - in relationship to IPv6
* pa_config-size | bugfix if length == 0 to avoid devicision with 0

GENERAL:
* framework introduce class Region | make use of it in all PAN-OS xml config parts


2.0.23 (20211121)
UTILS:
* pa_rule-merger - extend argument additionalmatch with 'secprof'
* pa_address-edit | introduce new reference filters
* pa_device-edit - extend manageddevice information if PAN-OS API is used
* pa_device-edit | introduce actions=exportInventoryToExcel / exportLicenseToExcport devicetype=manageddevice
* pa_rule-edit | actions=display:resolveServiceSummary shadow-json - if service is.application-default and app is.any => do service resolve to default app protocol port
* pa_rule-stats | optimised if arguments "cycleconnectedfirewalls" to display FW model
* pa_device-edit | introduce actions=display-shadowrule
* pa_device-edit - introduce actions=securityprofile-create-alert-only | until now working only against VSYS or DG - use filter=(name eq XYZ) to define where to create / no PAN-OS API mode supported yet
* pa_device-edit - optimise actions=securityprofile-create-alert-only[:true] - introduce bool argument [shared], if set to true profiles are create at SHARED level