@@ -5,6 +5,7 @@ UTILS:
 * pa_application-edit | class App method filteredApps() - introduce filter based on characeristics
 * pa_address-edit | introduce 'filter=(object is.region)'
 * pa_device-edit | actions=display-shadowrule - introduce PAN-OS version validation
+* pa_device-edit | introduce actions=geoip-check:[IP-ADDRESS]
 
 BUGFIX:
 * UTIL all object merger script | bugfix for pickfilter and excludefilter
